--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Copyright Protection Platform --DRJ",
+  "name": "copyright-protection-system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
