--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^5.7.7",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "silly-datetime": "*",
+    "mkdirp": "*",
+    "nodemon": "*"
   }
 }
