--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "lodash": "^4.17.15",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
+    "v-viewer": "^1.5.1",
     "vue": "^2.6.10",
     "vue-cover-gallery": "^1.0.7",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3",
+    "vue2-viewer": "^1.0.3",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
