--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 9001",
+    "serve": "vue-cli-service serve --port 4200",
     "build": "vue-cli-service build --port 80",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
     "element-ui": "^2.12.0",
     "flatpickr": "^4.5.1",
+    "hashmap": "^2.4.0",
     "imghash": "0.0.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
